Removed sudo from package,json

--- a/BACKEND/BACKEND/package.json
+++ b/BACKEND/BACKEND/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "sudo node ./APP.JS"
+    "start": "node ./APP.JS"
   },
   "keywords": [
     "health",
