Small tweaks to AWS_Website
1. Missing dependencies in package.json
2. Web files are mostly read from /home/ec2-user/www now,
/var/app/current/ now only has APP.JS

--- a/AWS_Website/package.json
+++ b/AWS_Website/package.json
@@ -6,7 +6,10 @@
     "ejs": ">= 0.0.0",
     "passport": ">= 0.0.0",
     "passport-local": ">= 0.0.0",
-    "connect-flash": "~0.1.0"
+    "connect-flash": "~0.1.0",
+    "mongodb": ">= 0.0.0",
+    "mongoose": ">= 0.0.0",
+    "bcrypt": ">= 0.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
