Alpha version of the prototype
Upload PPX -> Convert to HTML -> generate hash -> move files under hash
dir -> redirect browser to the hashed presentation URL

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ www/.DS_Store
 passport.socketio/
 
 BACKEND/BACKEND/node_modules/*.*
+
+**/node_modules/**
+
+AWS_Website/UPLOAD/**
+
+BACKEND/TEST/MA/**
