--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -14,7 +14,8 @@
     "socket.io-client": "~1.2.1",
     "cheerio": "0.17.0",
     "socketio-file-upload": "0.2.7",
-    "cacheman-mongo": ">= 0.0.0"
+    "cacheman-mongo": ">= 0.0.0",
+    "path": ">= 0.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
