Upload Overhaul, file name special symbols and same file name upload fix
Changed upload sequence: *.ppt -> /UPLOAD/*.ppt -> renamed/moved to
/slites/hash/im0.ppt -> converted to /slies/hash/*.html -> generated
/slites/hash/index.html

--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -2,20 +2,21 @@
   "name": "AWS-Website",
   "version": "0.0.0",
   "dependencies": {
-    "express3": ">= 0.0.0",
-    "ejs": ">= 0.0.0",
-    "passport": ">= 0.0.0",
-    "passport-local": ">= 0.0.0",
+    "bcrypt": ">= 0.0.0",
+    "cacheman-mongo": ">= 0.0.0",
+    "cheerio": "0.17.0",
     "connect-flash": "~0.1.0",
+    "ejs": ">= 0.0.0",
+    "express3": ">= 0.0.0",
+    "fs-extra": "^0.16.3",
     "mongodb": ">= 0.0.0",
     "mongoose": ">= 0.0.0",
-    "bcrypt": ">= 0.0.0",
+    "passport": ">= 0.0.0",
+    "passport-local": ">= 0.0.0",
+    "path": ">= 0.0.0",
     "socket.io": "~1.0",
     "socket.io-client": "~1.2.1",
-    "cheerio": "0.17.0",
-    "socketio-file-upload": "0.2.7",
-    "cacheman-mongo": ">= 0.0.0",
-    "path": ">= 0.0.0"
+    "socketio-file-upload": "0.2.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
