--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -2,21 +2,26 @@
   "name": "AWS-Website",
   "version": "0.0.0",
   "dependencies": {
-    "bcrypt": ">= 0.0.0",
-    "cacheman-mongo": ">= 0.0.0",
-    "cheerio": "0.17.0",
-    "connect-flash": "~0.1.0",
-    "ejs": ">= 0.0.0",
-    "express3": ">= 0.0.0",
+    "bcrypt": "^0.8.1",
+    "body-parser": "^1.11.0",
+    "cacheman-mongo": "^0.1.0",
+    "cheerio": "^0.17.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.3",
+    "ejs": "^2.2.4",
+    "express": "^4.11.2",
+    "express-session": "^1.10.2",
     "fs-extra": "^0.16.3",
-    "mongodb": ">= 0.0.0",
-    "mongoose": ">= 0.0.0",
-    "passport": ">= 0.0.0",
-    "passport-local": ">= 0.0.0",
-    "path": ">= 0.0.0",
-    "socket.io": "~1.0",
-    "socket.io-client": "~1.2.1",
-    "socketio-file-upload": "0.2.7"
+    "method-override": "^2.3.1",
+    "mongodb": "^2.0.15",
+    "mongoose": "^3.8.23",
+    "morgan": "^1.5.1",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "path": "^0.11.14",
+    "socket.io": "^1.3.3",
+    "socket.io-client": "^1.2.1",
+    "socketio-file-upload": "^0.3.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
