--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -2,6 +2,7 @@
   "name": "AWS-Website",
   "version": "0.0.0",
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "bcrypt": "^0.8.1",
     "body-parser": "^1.11.0",
     "cacheman-mongo": "^0.1.0",
@@ -16,12 +17,15 @@
     "mongodb": "^2.0.15",
     "mongoose": "^3.8.23",
     "morgan": "^1.5.1",
+    "nodeoffice": "0.0.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.2.1",
-    "socketio-file-upload": "^0.3.3"
+    "socketio-file-upload": "^0.3.3",
+    "watchr": "^2.4.13",
+    "xml2js": "^0.4.5"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
