--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
+    "ppt": "0.0.2",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.2.1",
     "socketio-file-upload": "^0.3.3",
