--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -26,6 +26,7 @@
     "socket.io-client": "^1.2.1",
     "socketio-file-upload": "^0.3.3",
     "watchr": "^2.4.13",
+    "wrench": "^1.5.8",
     "xml2js": "^0.4.5"
   },
   "scripts": {
