--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^3.8.23",
     "morgan": "^1.5.1",
     "nodeoffice": "0.0.1",
+    "node-uuid": "~1.4.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
@@ -26,6 +27,7 @@
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.2.1",
     "socketio-file-upload": "^0.3.3",
+    "underscore": "~1.5.2",
     "watchr": "^2.4.13",
     "wrench": "^1.5.8",
     "xml2js": "^0.4.5"
