Created page with user presentations
1. User presentations page /my.html
2.  Added created & updated date for notes
3. Added created date for Slide

--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -30,7 +30,8 @@
     "underscore": "~1.5.2",
     "watchr": "^2.4.13",
     "wrench": "^1.5.8",
-    "xml2js": "^0.4.5"
+    "xml2js": "^0.4.5",
+    "moment": "^2.10",
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
