--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -34,7 +34,8 @@
     "moment": "^2.10",
 	"du": "^0.1.0",
 	"node-bing-api": "",
-	"mongoose-simple-random": ""
+	"mongoose-simple-random": "",
+	"request": ""
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
