Added simple queue to the converter, no priority or paralelism

--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "adm-zip": "^0.4.7",
-    "bcrypt": "^0.8.1",
+    "bcrypt": "*",
     "body-parser": "^1.11.0",
     "cacheman-mongo": "^0.1.0",
     "cheerio": "^0.17.0",
@@ -15,8 +15,8 @@
     "fs-extra": "^0.16.3",
     "gaze": "^0.5.1",
     "method-override": "^2.3.1",
-    "mongodb": "^2.0.15",
-    "mongoose": "^3.8.23",
+    "mongodb": "*",
+    "mongoose": "*",
     "morgan": "^1.5.1",
     "nodeoffice": "0.0.1",
     "node-uuid": "~1.4.1",
