--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -36,7 +36,13 @@
     "node-bing-api": "",
     "mongoose-simple-random": "",
     "request": "",
-    "paypal-ipn": ""
+    "paypal-ipn": "",
+	"scmp": "",
+	"jwt-simple": "",
+	"q": "",
+	"jsonwebtoken": "",
+	"deprecate": "",
+	"string.prototype.startswith": ""
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
