BE S3 fix + updated ElasticBeansTalk configs

--- a/AWS_Website/BACKEND/.ebextensions/01_files.config
+++ b/AWS_Website/BACKEND/.ebextensions/01_files.config
@@ -10,7 +10,7 @@ files:
                 }
 
                 server {
-                  server_name *.prezera.tk;
+                  server_name *.prezera.tk prezera.tk;
                   listen 8080;
                   listen 443 ssl;
                   ssl_certificate /home/ec2-user/keys/prezera.tk.crt;
@@ -28,7 +28,7 @@ files:
                 }
 
                 server {
-                  server_name *.prezera.com;
+                  server_name *.prezera.com prezera.com;
                   listen 8080;
                   listen 443 ssl;
                   ssl_certificate /home/ec2-user/keys/prezera_wild.crt;
