--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -44,7 +44,10 @@
   	"deprecate": "",
   	"string.prototype.startswith": "",
     "aws-sdk": "",
-    "opentok": ""
+    "opentok": "",
+    "ws": "~0.7.2",
+    "kurento-client": "Kurento/kurento-client-js",
+    "minimist": "^1.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
