--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -22,6 +22,7 @@
     "node-uuid": "~1.4.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "passport-facebook": "^2.0.0",
     "path": "^0.11.14",
     "ppt": "0.0.2",
     "socket.io": "^1.3.7",
