--- a/AWS_Website/BACKEND/package.json
+++ b/AWS_Website/BACKEND/package.json
@@ -48,7 +48,8 @@
     "opentok": "",
     "ws": "~0.7.2",
     "minimist": "^1.1.1",
-    "password-generator": ""
+    "password-generator": "",
+	"kurento-client": "^6.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
